# ds-context-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: mcp_config.json
src/ds_context_mcp/: server.py
src/ds_context_mcp/tools/: columns.py  datasets.py  relations.py  sql.py
src/ds_context_mcp/utils/: formatters.py  readers.py
tests/: test_column_profile.py  test_datasets.py  test_describe_dataset.py  test_query_sql.py  test_relations.py  test_sample_rows.py
