[project]
name = "ds-context-mcp"
version = "0.1.0"
description = "MCP server that exposes local dataset schema and statistics to LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "kkkka16", email = "koki@furiousgreen.co" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0",
    "mcp[cli]>=1.2.0",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=17",
    "pydantic>=2.8",
]

[project.scripts]
ds-context-mcp = "ds_context_mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.6",
    "scikit-learn>=1.8.0",
    "seaborn",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
